--- a/css/style.scss
+++ b/css/style.scss
@@ -40,7 +40,7 @@ a:hover, a:active { color: $voared; text-decoration: underline; }
 ::-moz-selection { background-color: $highlight; }
 ::selection      { background-color: $highlight; }
 
-article { overflow: hidden; }
+//article { overflow: hidden; }
 
 header, rows, footer {
 	font-size: 18px;
