--- a/css/_home-cards.scss
+++ b/css/_home-cards.scss
@@ -241,6 +241,7 @@
 		
 		.text {
 			margin-left: .5rem;
+			padding-top: .2rem;
 		}
 		
 		h2 {
@@ -359,6 +360,7 @@
 			.text {
 				left: 50%;
 				max-width: calc(50% - 8px);
+				padding-top: 0;
 				top: 0%;
 			}
 			
