--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -1,3 +1,6 @@
+//  css/_story-card.scss styles partials/story-card.php
+
+
 
 .card-row {
 	display: flex;
@@ -9,10 +12,10 @@
 }
 
 .story-card {
+	display: block;
 	flex-grow: 1;
 	height: 100%;
-	min-height: 360px;
-	max-height: 80vh;
+	//min-height: 360px;
 	margin: 0 0 16px 0;
 	padding: 0;
 	position: relative;
@@ -20,76 +23,66 @@
 }
 
 .story-card > a {
-	// background-image in story-card.php
-	background-color: $vltgray;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	background-size: cover;
+	background-color: $ultgray;
+	color: $offblack;
 	display: block;
 	height: 100%;
 	margin: 0;
 	padding: 0;
 	position: relative;
 	text-decoration: none;
+	@include transition( all .5s ease );
 	width: 100%;
 }
 
 .story-card > a:hover {
-	// hover background-image in story-card.php
+	background-color: $dkwhite;
+}
+
+.story-card > a > .bg-container {
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
 }
 
 .story-card > a > .text {
-	margin-left: .5rem;
+	max-width: calc(100% - 28px - 2rem); // leave room for video icon
+	position: relative;
 	text-align: left;
-	width: 80%;
+	z-index: 5;
 }
 
 .story-card > a h2 {
-	background-color: $offblack;
-	box-decoration-break: clone;
-	@include box-shadow( .5rem 0 0 $offblack, -.5rem 0 0 $offblack );
-	color: $offwhite;
-	display: inline;
 	font-size: 1.5rem;
-	font-weight: 300;
-	line-height: 1.35em;
-	padding: .25rem 0;
+	font-weight: 700;
+	line-height: 1.35;
+	margin: 0 0 1rem 0;
+	padding: 0;
 	text-decoration: none;
-
 	@include transition( all .5s ease );
 }
 
-.story-card > a:hover h2 {
-	background-color: $voablue;
-	@include box-shadow( .5rem 0 0 $voablue, -.5rem 0 0 $voablue );
-}
+.story-card > a:hover h2 { }
 
-.story-card > a p,
-.story-card > a .continue {
-	background-color: transparent;
-	box-decoration-break: clone;
-	@include box-shadow( .5rem 0 0 transparent, -.5rem 0 0 transparent );
-	color: transparent;
-	display: inline;
+.story-card > a p {
 	font-size: 1rem;
 	font-weight: 400;
-	line-height: 1.25rem;
-	padding: .15rem 0;
-	text-decoration: none;
-	
+	line-height: 1.35;
+	margin: 0 0 1rem 0;
+	padding: 0;
+}
+
+.story-card > a:hover p { }
+
+.story-card > a p.continue {
 	@include transition( all .5s ease );
-}
-
-.story-card > a:hover p {
-	background-color: $offblack;
-	@include box-shadow( .5rem 0 0 $offblack, -.5rem 0 0 $offblack );
-	color: $offwhite;
-}
-
-.story-card > a:hover .continue {
-	background-color: $voablue;
-	@include box-shadow( .5rem 0 0 $voablue, -.5rem 0 0 $voablue );
-	color: $offwhite;
 }
 
 .video-icon {
@@ -98,8 +91,9 @@
 	border-style: solid;
 	border-width: 0 0 2px 2px;
 	color: $offwhite;
+	font-size: 1rem;
 	line-height: 1;
-	padding: 1rem;
+	padding: 12px;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -119,95 +113,182 @@
 	line-height: 1;
 	margin: 0;
 	padding: .5rem 1rem .5rem .75rem;
+	z-index: 10;
 }
 
 .clearfix:after {
 	content: "";
 	display: table;
 	clear: both;
-	height: .5rem;
+	//height: .5rem;
 }
 
 
 
-// text-y story-card styles
-
-.story-card.card-noimg > a {
-	background: $vltgray;
-}
-
-.story-card.card-noimg > a:hover {
-	background: $mltgray;
-}
-
-.story-card.card-noimg > a h2 {
-	background-color: transparent;
-	box-decoration-break: clone;
-	@include box-shadow( .5rem 0 0 transparent, -.5rem 0 0 transparent );
-	color: $offblack;
-	display: inline;
-	font-size: 1.5rem;
-	font-weight: 300;
-	line-height: 1.35em;
-	padding: .25rem 0;
-	text-decoration: none;
-
-	@include transition( all .5s ease );
-}
-
-.story-card.card-noimg > a:hover h2 {
-	background-color: $voablue;
-	color: $offwhite;
-	@include box-shadow( .5rem 0 0 $voablue, -.5rem 0 0 $voablue );
-}
-
-.story-card.card-noimg > a p,
-.story-card.card-noimg > a .continue {
-	background-color: none;
-	box-decoration-break: clone;
-	@include box-shadow( none );
-	color: $midgray;
-	display: inline;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.25rem;
-	padding: .15rem 0;
-	text-decoration: none;
+.card-noimg {
+	a {
+		.text { margin: .5rem; }
+		
+		h2 { 
+			color: $offblack;
+		}
+		
+		p.continue {
+			background-color: $mltgray;
+			border-radius: .25em;
+			color: $midgray;
+			display: inline-block;
+			font-size: .9rem;
+			letter-spacing: .015em;
+			padding: .5em;
+		}
+		
+		.bg-container {
+			background-image: none !important;
+		}
+	}
 	
-	@include transition( all .5s ease );
-}
-
-.story-card.card-noimg > a .continue {
-	@include box-shadow( .5rem 0 0 transparent, -.5rem 0 0 transparent );
-	color: $voablue;
-}
-
-.story-card.card-noimg > a:hover p {
-	background-color: transparent;
-	@include box-shadow( none );
-	color: $offblack;
-}
-
-.story-card.card-noimg > a:hover .continue {
-	background-color: $voablue;
-	@include box-shadow( .5rem 0 0 $voablue, -.5rem 0 0 $voablue );
-	color: $offwhite;
+	a:hover {
+		h2 { color: $voablue; }
+		
+		p.continue {
+			background-color: $voablue;
+			color: $offwhite;
+		}
+	}
 }
 
 
 
-.story-card.card-txt > a {
-	background-position: 50% 0;
-	background-size: auto 35%;
-}
-
-.story-card.card-txt > a > .text {
-	position: absolute;
-	top: calc(35% + 1rem);
-}
-
-.story-card.card-txt.card-full > a {
+.card-txt {
+	a {
+		//padding-top: 40%;
+		
+		.text {
+			background-color: $ultgray;
+			max-width: 100%;
+			//margin-top: 40%;
+			padding: .5rem;
+			//top: 40%;
+			@include transition( all .5s ease );
+		}
+		
+		h2 { 
+			color: $offblack;
+		}
+		
+		p.continue {
+			background-color: $mltgray;
+			border-radius: .25em;
+			color: $midgray;
+			display: inline-block;
+			font-size: .9rem;
+			letter-spacing: .015em;
+			padding: .5em;
+		}
+		
+		.category {
+			//position: absolute;
+			top: calc(150px - 2.5rem - 4px);
+			bottom: auto;
+			right: 0;
+			//background: $voared;
+			//border-color: $bodybg;
+			//border-style: solid;
+			border-width: 2px 0 2px 2px;
+			//color: $offwhite;
+			//font-size: .8rem;
+			//line-height: 1;
+			//margin: 0;
+			padding: .5rem 1rem .5rem .75rem;
+			//z-index: 10;
+		}
+		
+		.bg-container {
+			background-position: center top;
+			//max-height: 150px;
+			//height: 100%;
+			
+			position: relative;
+			display: block;
+			top: 0;
+			right: 0;
+			bottom: auto;
+			left: 0;
+			height: 150px;
+		}
+		
+		// .category, .video-icon { display: none !important; }
+	}
 	
+	a:hover {
+		.text {
+			background-color: $dkwhite;
+		}
+		
+		h2 { color: $voablue; }
+		
+		p.continue {
+			background-color: $voablue;
+			color: $offwhite;
+		}
+	}
+}
+
+
+
+.card-img {
+	a {
+		min-height: 360px;
+		
+		.text {
+			margin-left: .5rem;
+			padding-top: .2rem;
+		}
+		
+		h2 {
+			background-color: $offblack;
+			box-decoration-break: clone;
+			@include box-shadow( .5rem 0 0 $offblack, -.5rem 0 0 $offblack );
+			color: $offwhite;
+			display: inline;
+			padding: .25rem 0;
+		}
+		
+		.clearfix:after {
+			height: 1rem;
+		}
+		
+		p.teaser {
+			display: none;
+			@include transition( all .5s ease );
+		}
+		
+		p.continue {
+			background-color: transparent;
+			box-decoration-break: clone;
+			@include box-shadow( .5rem 0 0 transparent, -.5rem 0 0 transparent );
+			color: transparent;
+			display: inline;
+			font-size: 1rem;
+			font-weight: 400;
+			line-height: 1.2;
+			padding: .25em 0;
+		}
+	}
+	
+	a:hover {
+		h2 {
+			background-color: $voablue;
+			@include box-shadow( .5rem 0 0 $voablue, -.5rem 0 0 $voablue );
+		}
+		
+		p.continue {
+			background-color: $bodybg;
+			@include box-shadow( .5rem 0 0 $bodybg, -.5rem 0 0 $bodybg );
+			color: $voablue;
+		}
+	}
 }
 
 
@@ -228,7 +309,8 @@
 	
 	.story-card {
 		flex-basis: 0;
-		height: 360px;
+		height: 450px;
+		overflow: hidden;
 	}
 
 	.story-card.card-half {
@@ -244,9 +326,28 @@
 	}
 
 	.story-card > a {
+		height: 100%;
 		margin-left: 8px;
 		margin-right: 8px;
 		width: calc(100% - 16px);
+	}
+	
+	.card-img.card-full a p.teaser,
+	.card-img.card-half a p.teaser {
+		background-color: transparent;
+		box-decoration-break: clone;
+		@include box-shadow( .5rem 0 0 transparent, -.5rem 0 0 transparent );
+		color: transparent;
+		display: inline;
+		line-height: 1.2;
+		padding: .2rem 0;
+	}
+	
+	.card-img.card-full a:hover p.teaser,
+	.card-img.card-half a:hover p.teaser {
+		background-color: $offblack;
+		@include box-shadow( .5rem 0 0 $offblack, -.5rem 0 0 $offblack );
+		color: $offwhite;
 	}
 
 }
@@ -255,7 +356,24 @@
 
 
 
-@media (min-width: 600px) { }
+@media (min-width: 600px) {
+	.card-full.card-txt {
+		a {
+			.text {
+				left: 50%;
+				max-width: calc(50% - 8px);
+				padding-top: 0;
+				top: 0%;
+			}
+			
+			.bg-container {
+				background-position: left top;
+				max-height: 100%;
+				max-width: calc(50% - 8px);
+			}
+		}
+	}
+}
 
 
 
@@ -264,7 +382,7 @@
 @media (min-width: 750px) {
 	
 	.story-card {
-		height: 450px;
+	// 	height: 450px;
 	}
 
 	.card-row-3 > .story-card.card-half {
@@ -298,6 +416,46 @@
 		margin-left: 12px;
 		margin-right: 12px;
 		width: calc(100% - 24px);
+	}
+	
+	.card-img.card-quarter a p.teaser {
+		background-color: transparent;
+		box-decoration-break: clone;
+		@include box-shadow( .5rem 0 0 transparent, -.5rem 0 0 transparent );
+		color: transparent;
+		display: inline;
+		line-height: 1.2;
+		padding: .2rem 0;
+	}
+	
+	.card-img.card-quarter a:hover p.teaser {
+		background-color: $offblack;
+		@include box-shadow( .5rem 0 0 $offblack, -.5rem 0 0 $offblack );
+		color: $offwhite;
+	}
+	
+	.card-txt {
+		a {
+			.category {
+				top: calc(207px - 2.5rem - 4px);
+			}
+			
+			.bg-container {
+				height: 207px;
+			}
+		}
+	}
+	
+	.card-full.card-txt {
+		a {
+			.text {
+				max-width: calc(50% - 12px);
+			}
+			
+			.bg-container {
+				max-width: calc(50% - 12px);
+			}
+		}
 	}
 
 }
