--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 /*
 Theme Name:   VOA Top Content
 Theme URI:    https://github.com/pp19dd/voa-top-content
-Description:  Custom theme for VOA Blogs
+Description:  Custom theme for VOA Blogs and Editor's Picks
 Author:       Stephen Mekosh and Dino Beslagic
 Author URI:   https://www.voanews.com/
 Version:      1.0
@@ -40,7 +40,7 @@ a:hover, a:active { color: $voared; text-decoration: underline; }
 ::-moz-selection { background-color: $highlight; }
 ::selection      { background-color: $highlight; }
 
-//article { overflow: hidden; }
+
 
 header, rows, footer {
 	font-size: 18px;
@@ -51,29 +51,6 @@ rows {
 	margin: auto;
 	max-width: 1200px;
 }
-
-// footer {
-// 	background-color: $offblack;
-// 	color: $offwhite;
-// }
-
-// footer inner {
-// 	display: flex;
-// 	align-items: center;
-// 	justify-content: space-between;
-// 	margin: auto;
-// 	max-width: 1200px;
-// }
-
-// footer item a {
-// 	color: $offwhite;
-// 	display: inline-block;
-// 	font-size: .8em;
-// 	font-weight: bold;
-// 	padding: 1em;
-// 	text-decoration: none;
-// 	text-transform: uppercase;
-// }
 
 /* ======================================================================== */
 
@@ -131,192 +108,15 @@ rows {
 }
 
 rows row.rows_1, rows row.rows_2, rows row.rows_3 {
-	//padding-bottom:1em;
-	//margin-top:1em;
 	display: flex;
 	flex-direction: row;
 }
 
-/*
-row.rows_3 article { width: 22.75%; }
-row.rows_3 article.column_2 { padding-right: 3%; }
-row.rows_3 article.column_1 { width: 48.5%; padding-right:3%; }
-
-row.rows_2 article { width: 48.5% }
-row.rows_2 article.column_1 { padding-right:3% }
-
-row.rows_2 inner { display: flex; align-items: stretch; }
-row.rows_3 inner { display: flex; flex-direction: column; }
-
-
-row.rows_2 inner part.two {
-	display: flex;
-	flex-direction: column;
-}
-
-row.rows_1 article.column_1 { width: 100%; }
-row.rows_1 article.column_1 inner a img { height: auto; max-width: 100%; width: 100%; }
-*/
-
-/* ======================================================================== */
-
-/* multi-line padding text trick */
-/*
-row.rows_3 headline, row.rows_1 headline, row.rows_1 excerpt {
-	line-height:1.3;
-	padding: 2px 0;
-	border-left: 20px solid rgba(0,0,0,1);
-}
-row.rows_3 headline span, row.rows_1 headline span, row.rows_1 excerpt span {
-	background-color: rgba(0,0,0,1);
-	padding: 3px 0;
-	display: inline;
-	margin: 0;
-}
-
-row.rows_1 excerpt span { padding: 2.5px 0; }
-
-row.rows_3 headline span a, row.rows_1 headline span a, row.rows_1 excerpt span span {
-	position: relative;
-	left: -10px;
-}
-*/
-/* end multi-line padding text trick */
-
-/*
-part headline { font-size: 1em }
-part { width: 46.5%;  }
-part.one { padding-right: 6.81555555%; } // hack to fix off-by-2px issue
-
-part.one img { height: auto; width: 100%; }
-part.one .part-one-img { position: relative; }
-
-part.two { }
-part.two byline {
-	color: $midgray;
-	font-size: .8em;
-	margin-top: .5em;
-}
-
-part a { color: $offblack !important }
-part a:hover { color: $voablue !important; }
-*/
 article {
 	display:flex;
 	flex-direction: column;
 }
-/*
-row.rows_3 inner, row.rows_1 inner {
-	line-height:1.3em;
-	position: relative;
-}
 
-headline {
-	font-weight: 700;
-	font-size:1.5em;
-	line-height:1.3em;
-}
-
-// hover cluster
-row.rows_3 article.hovering headline,
-row.rows_1 article.hovering headline
-{
-	border-left: 20px solid rgba(19,49,191,1);
-}
-row.rows_3 article.hovering headline span,
-row.rows_1 article.hovering headline span
-{
-	background-color: rgba(19,49,191,1);
-}
-
-row.rows_2 article img { display: block; }
-
-row.rows_2 article.hovering img {
-	opacity: 0.7;
-}
-
-row.rows_2 article.hovering headline a {
-	color: $offwhite !important;
-}
-
-row.rows_2 article.hovering inner {
-	background-color: rgba(51,51,51,0.8);
-	height: 100%;
-	color: $vltgray;
-}
-
-row.rows_1 byline, row.rows_3 byline {
-	background: rgba(255, 255, 255, .8);
-	color: $offblack;
-	margin: .5em auto 1em 0;
-	padding: .25em 10px;
-}
-row.rows_3 excerpt { padding-left: 10px; }
-
-
-// bw
-row.rows_3 article.hovering inner, row.rows_1 article.hovering inner { background-color: $offblack; }
-row.rows_3 article.hovering img, row.rows_1 article.hovering img { opacity:0.5 }
-
-// end hover cluster
-
-row.rows_3 anchor, row.rows_1 anchor { position: absolute; display: flex; flex-direction: column; z-index: 100; width: calc(100% - 60px); }
-headline a, continue a { text-decoration: none; color: $offwhite; }
-row.rows_3 headline {  }
-row.rows_3 excerpt {  }
-
-row.rows_3 excerpt, row.rows_1 excerpt {
-	color: $offwhite;
-}
-excerpt { margin-top: 0.5em; }
-
-row.rows_3 .column_1 headline, row.rows_3 .column_1 excerpt {
-	width: 45%;
-}
-
-row.rows_1 .column_1 headline, row.rows_1 .column_1 excerpt {
-	width: 45%;
-}
-
-continue { margin-top: 1em; }
-continue span { padding:10px; background-color: rgba(19,49,191, 1); color: $offwhite }
-
-
-.video-icon {
-	display: block;
-	position: absolute;
-	top: 0;
-	right: 0;
-	z-index: 1000;
-}
-
-.video-icon-inner {
-	background-color: $voablue;
-	border-left: 4px solid $bodybg;
-	border-bottom: 4px solid $bodybg;
-	color: $offwhite;
-	text-align: center;
-}
-
-.video-icon-inner .fa-video-camera { font-size: 1em; margin: 1em; }
-
-.language-service {
-	display: block;
-	position: absolute;
-	bottom: 1em;
-	right: 0;
-	z-index: 1000;
-}
-
-.lang-voa-english { display: none; visibility: hidden; }
-
-.language-service-inner {
-	background-color: $voared;
-	color: $offwhite;
-	font-size: .8em;
-	padding: .25em .8em .25em .5em;
-}
-*/
 
 
 /* ======================================================================== */
@@ -325,11 +125,13 @@ continue span { padding:10px; background-color: rgba(19,49,191, 1); color: $offw
 
 .single  .rows_1,
 .page    .rows_1,
-.archive .rows_1 { margin-top: 0; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
+.archive .rows_1,
+.search  .rows_1, { margin-top: 0; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
 
 .single article,
 .page .rows_1 > article,
-.archive .rows_1 > article {
+.archive .rows_1 > article,
+.search .rows_1 > article {
 	flex-direction: row;
 	width: 100%;
 }
@@ -343,8 +145,9 @@ article > content {
 
 .archive article > content { padding-top: 2rem; }
 
-.single article > content,
-.archive article > content .content-part {
+.single  article > content,
+.archive article > content .content-part,
+.search  article > content .content-part {
 	border: none;
 }
 
@@ -390,12 +193,6 @@ article > content p.wp-caption-text {
 	margin: 0;
 	padding: 0 .5rem 1.6rem .5rem;
 }
-
-// article > content .article-body > *:not(.wp-caption),
-// article > content .article-author,
-// article > content .article-share,
-// article > content .article-categories,
-// article > content .article-tags 
 
 .article-body > p > img {
 	margin-left: -4rem;
@@ -809,7 +606,8 @@ article > content .comments .comments-inner {
 /* PAGES *********************************************************************/
 
 .page .rows_1 > article > content,
-.archive .rows_1 > article > content {
+.archive .rows_1 > article > content,
+.search .rows_1 > article > content {
 	background-color: $offwhite;
 }
 
@@ -984,13 +782,15 @@ article > content .comments .comments-inner {
 
 	.single article,
 	.page .rows_1 > article,
-	.archive .rows_1 > article {
+	.archive .rows_1 > article,
+	.search .rows_1 > article {
 		flex-direction: column;
 	}
 
 	article > content,
 	.page .rows_1 > article > content,
-	.archive .rows_1 > article > content {
+	.archive .rows_1 > article > content,
+	.search .rows_1 > article > content {
 		width: auto;
 	}
 	
@@ -1032,11 +832,6 @@ article > content .comments .comments-inner {
 
 	h1 { font-size: 2.5em; }
 
-	// article > content .article-body > *:not(.wp-caption),
-	// article > content .article-author,
-	// article > content .article-share,
-	// article > content .article-categories,
-	// article > content .article-tags 
 	article > content .content-part {
 		padding-left:  1rem;
 		padding-right: 1rem;
@@ -1073,18 +868,6 @@ article > content .comments .comments-inner {
 
 	.article-title-text { font-size: 1.5em; }
 
-	/*
-	row.rows_3 headline, row.rows_2 headline, row.rows_1 headline { font-size: 1em; }
-
-	row.rows_3 .column_1 headline, row.rows_3 .column_1 excerpt,
-	row.rows_1 .column_1 headline, row.rows_1 .column_1 excerpt { width: 65%; }
-
-	row.rows_3 excerpt, row.rows_1 excerpt, row.rows_2 excerpt { font-size: .9em; }
-	
-	row.rows_3 anchor, row.rows_1 anchor { width: calc(100% - 35px); }
-	.video-icon-inner .fa-video-camera { font-size: .8em; margin: .5em; }
-	*/
-
 	sidebar-inner { flex-direction: column; padding: 0 1em; }
 
 	sidebar-inner > * { padding: 0; width: 100%; }
@@ -1113,15 +896,9 @@ article > content .comments .comments-inner {
 
 @media (max-width: 450px) {
 
-	// .voa-logo { margin-left: .5em; }
-
 	h1 { font-size: 2em; }
 
 	.article-title-text { font-size: 1em; }
-
-	/* row.rows_3 excerpt, row.rows_2 excerpt, row.rows_1 excerpt { display: none !important; } */
-
-	// .voa-masthead menu a { padding: 1.25em .8em; }
 
 	continue { display: none !important; opacity: 0 !important; visibility: hidden !important; }
 
@@ -1136,11 +913,6 @@ article > content .comments .comments-inner {
 @media (max-width: 340px) {
 
 	h1 { font-size: 1.5em; }
-
-	// .voa-masthead menu a {
-	// 	font-weight: 400;
-	// 	padding: 1.25em .5em;
-	// }
 
 }
 
@@ -1169,6 +941,12 @@ h1.site-title {
 	top: 0;
 	width: 100%;
 	z-index: 1000;
+	@include transition( all .2s ease );
+}
+
+.masthead-search-expanded {
+	margin-bottom: 3.5rem;
+	@include transition( all .2s ease );
 }
 
 .voa-masthead-inner {
@@ -1211,13 +989,11 @@ h1.site-title {
 
 .site-nav > * > .menu {
 	display: none;
-
+	@include box-shadow( 2px 2px 8px -1px rgba( 0, 0, 0, .2 ), -2px 2px 8px -1px rgba( 0, 0, 0, .2 ) );
 	position: absolute;
 	right: -1rem;
 	top: 2.25rem;
 	width: 150px;
-
-	@include box-shadow( 2px 2px 8px -1px rgba( 0, 0, 0, .2 ), -2px 2px 8px -1px rgba( 0, 0, 0, .2 ) );
 }
 
 .site-nav > * > .menu > ul {
@@ -1259,27 +1035,37 @@ h1.site-title {
 .search-form-container {
 	background-color: $vltgray;
 	border-bottom: 1px solid $mltgray;
-	display: none;
 	padding: 1rem;
+	text-align: center;
 }
 
 .search-form {
-	align-content: center;
-	display: flex;
-	justify-content: center;
 	margin: 0 auto;
 	max-width: calc(1200px - 2rem);
 }
 
 .search-form input {
+	font-family: 'Lato', sans-serif;
 	font-size: 1rem;
+}
+
+.search-nav {
+	position: unset;
+}
+
+.search-nav > .search-form-container {
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 50px;
+	max-width: calc(100% - 2rem);
+	width: 100%;
 }
 
 
 
 // homepage story-card mobile layouts
-//@import 'story-card';
-@import 'home-cards';
+@import 'story-card';
 
 
 
@@ -1379,15 +1165,10 @@ h1.site-title {
 
 
 .author-bio-box {
-	// display: flex;
-	// flex-direction: row;
-	// flex-wrap: nowrap;
 	padding-bottom: 2rem;
 }
 
 .author-bio-box .author-avatar {
-	// flex-basis: 80px;
-	// flex-grow: 1;
 	float: left;
 	margin: 0 1rem .5rem 0;
 	height: 80px;
@@ -1396,10 +1177,7 @@ h1.site-title {
 
 .author-bio-box .author-avatar img { border-radius: 10px; }
 
-.author-bio-box .author-bio {
-	// flex-basis: 0;
-	// flex-grow: 3;
-}
+.author-bio-box .author-bio { }
 
 .author-bio-box h1 {
 	margin-bottom: .5rem;
@@ -1475,6 +1253,13 @@ h1.site-title {
 
 
 
+.article-excerpt img.size-quarter-width-short {
+	height: auto;
+	width: 276px;
+}
+
+
+
 /* comments **************************************************************************************/
 
 @import 'comments';
@@ -1485,11 +1270,19 @@ h1.site-title {
 
 
 // eventually moving everything to mobile-first
+@media (min-width: 450px) {
+	
+	.search-nav > .search-form-container { text-align: right; }
+	
+}
+
+
+
+
+
 @media (min-width: 600px) {
 	
 	h1.site-title { margin: 2rem auto; }
-	
-	header.search-form-container .search-form { justify-content: flex-end; }
 	
 	.article-body > .alignleft {
 		margin-left: -4rem;
