--- a/style.css
+++ b/style.css
@@ -1319,7 +1319,15 @@ h1.site-title {
     -ms-box-shadow: 0.5rem 0 0 #333, -0.5rem 0 0 #333;
     -o-box-shadow: 0.5rem 0 0 #333, -0.5rem 0 0 #333;
     box-shadow: 0.5rem 0 0 #333, -0.5rem 0 0 #333;
-    color: #fcfcfc; } }
+    color: #fcfcfc; }
+
+  .card-txt.card-half a h2,
+  .card-txt.card-quarter a h2 {
+    font-size: 1rem;
+    margin-bottom: .5rem; }
+  .card-txt.card-half a p.teaser,
+  .card-txt.card-quarter a p.teaser {
+    font-size: .9rem; } }
 @media (min-width: 600px) {
   .card-full.card-txt a .text {
     left: 50%;
@@ -1340,6 +1348,10 @@ h1.site-title {
   .card-row {
     flex-direction: row;
     justify-content: space-between; }
+
+  .card-row-2.card-row-short .story-card {
+    height: 207px;
+    overflow: hidden; }
 
   .story-card {
     flex-basis: 0;
@@ -1377,6 +1389,18 @@ h1.site-title {
     top: calc(207px - 2.5rem - 4px); }
   .card-txt a .bg-container {
     height: 207px; }
+
+  .card-row-short > .card-half.card-txt a .text {
+    margin-left: 50%;
+    max-width: 50%;
+    padding-left: 12px;
+    position: absolute;
+    top: 0; }
+  .card-row-short > .card-half.card-txt a .category,
+  .card-row-short > .card-half.card-txt a .video-icon {
+    right: calc(50% + 12px); }
+  .card-row-short > .card-half.card-txt a .bg-container {
+    width: calc(50% - 12px); }
 
   .card-full.card-txt a .text {
     max-width: calc(50% - 12px); }
