Short row card layout improvements

--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -323,6 +323,14 @@
 		height: 450px;
 		overflow: hidden;
 	}
+	
+	.card-row-2.card-row-short > .story-card {
+		height: auto;
+	}
+	
+	.card-row-2.card-row-short > .card-img > a {
+		min-height: auto;
+	}
 
 	.story-card.card-half {
 		flex-basis: 50%;
@@ -425,11 +433,6 @@
 		justify-content: space-between;
 	}
 	
-	.card-row-2.card-row-short .story-card {
-		height: 207px;
-		overflow: hidden;
-	}
-	
 	.story-card {
 		flex-basis: 0;
 		height: 576px;
@@ -476,8 +479,6 @@
 				margin-left: 50%;
 				max-width: 50%;
 				padding-left: 12px;
-				position: absolute;
-				top: 0;
 			}
 			
 			.category,
@@ -486,6 +487,9 @@
 			}
 			
 			.bg-container {
+				position: absolute;
+				top: 0;
+				left: 0;
 				width: calc(50% - 12px);
 			}
 		}
