--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -396,8 +396,15 @@
 			
 			.bg-container {
 				background-position: left top;
+				height: 100%;
 				max-height: 100%;
 				max-width: calc(50% - 8px);
+				position: absolute;
+			}
+			
+			.category,
+			.video-icon {
+				right: calc(50% + 12px);
 			}
 		}
 	}
