--- a/css/style.scss
+++ b/css/style.scss
@@ -34,6 +34,11 @@ img {
 	width: 100%;
 }
 
+iframe {
+	display: block;
+	max-width: 100%;
+}
+
 a, a:visited { color: $voablue; text-decoration: underline; }
 a:hover, a:active { color: $voared; text-decoration: underline; }
 
