--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ img {
   max-width: 100%;
   width: 100%; }
 
+iframe {
+  display: block;
+  max-width: 100%; }
+
 a, a:visited {
   color: #1330bf;
   text-decoration: underline; }
@@ -1336,20 +1340,28 @@ h1.site-title {
   .card-txt.card-quarter a p.teaser {
     font-size: .9rem; } }
 @media (min-width: 600px) {
-  .card-full.card-txt a .text {
+  .card-full.card-txt a .text,
+  .card-row-1 .card-1.card-txt a .text {
     left: 50%;
     max-width: calc(50% - 8px);
     padding-top: 0;
     top: 0%; }
-  .card-full.card-txt a .bg-container {
+  .card-full.card-txt a .bg-container,
+  .card-row-1 .card-1.card-txt a .bg-container {
     background-position: left top;
     height: 100%;
     max-height: 100%;
     max-width: calc(50% - 8px);
     position: absolute; }
   .card-full.card-txt a .category,
-  .card-full.card-txt a .video-icon {
-    right: calc(50% + 12px); } }
+  .card-full.card-txt a .video-icon,
+  .card-row-1 .card-1.card-txt a .category,
+  .card-row-1 .card-1.card-txt a .video-icon {
+    right: calc(50% + 12px); }
+  .card-full.card-txt a .category,
+  .card-row-1 .card-1.card-txt a .category {
+    top: auto;
+    bottom: .75rem; } }
 @media (min-width: 750px) {
   .card-row-3 > .story-card.card-half {
     flex-basis: 50%; }
@@ -1411,9 +1423,11 @@ h1.site-title {
     left: 0;
     width: calc(50% - 12px); }
 
-  .card-full.card-txt a .text {
+  .card-full.card-txt a .text,
+  .card-row-1 .card-1.card-txt a .text {
     max-width: calc(50% - 12px); }
-  .card-full.card-txt a .bg-container {
+  .card-full.card-txt a .bg-container,
+  .card-row-1 .card-1.card-txt a .bg-container {
     max-width: calc(50% - 12px); } }
 .hero-row {
   display: block; }
