Fixed minor bug for short card-row-2 height

--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -332,6 +332,10 @@
 	.card-row-2.card-row-short > .card-img > a {
 		min-height: auto;
 	}
+	
+	.card-row-2 > .card-txt > a {
+		min-height: 207px;
+	}
 
 	.story-card.card-half {
 		flex-basis: 50%;
