--- a/style.css
+++ b/style.css
@@ -1132,7 +1132,7 @@ h1.site-title {
   right: 0;
   z-index: 10; }
 
-.category {
+.card-label-category {
   position: absolute;
   bottom: .75rem;
   right: 0;
@@ -1191,7 +1191,7 @@ h1.site-title {
   font-size: .9rem;
   letter-spacing: .015em;
   padding: .5em; }
-.card-txt a .category {
+.card-txt a .card-label-category {
   top: calc(150px - 2.5rem - 4px);
   bottom: auto;
   right: 0;
@@ -1356,13 +1356,13 @@ h1.site-title {
     max-height: 100%;
     max-width: calc(50% - 8px);
     position: absolute; }
-  .card-full.card-txt a .category,
+  .card-full.card-txt a .card-label-category,
   .card-full.card-txt a .video-icon,
-  .card-row-1 .card-1.card-txt a .category,
+  .card-row-1 .card-1.card-txt a .card-label-category,
   .card-row-1 .card-1.card-txt a .video-icon {
     right: calc(50% + 12px); }
-  .card-full.card-txt a .category,
-  .card-row-1 .card-1.card-txt a .category {
+  .card-full.card-txt a .card-label-category,
+  .card-row-1 .card-1.card-txt a .card-label-category {
     top: auto;
     bottom: .75rem; } }
 @media (min-width: 750px) {
@@ -1408,7 +1408,7 @@ h1.site-title {
     box-shadow: 0.5rem 0 0 #333, -0.5rem 0 0 #333;
     color: #fcfcfc; }
 
-  .card-txt a .category {
+  .card-txt a .card-label-category {
     top: calc(207px - 2.5rem - 4px); }
   .card-txt a .bg-container {
     height: 207px; }
@@ -1417,7 +1417,7 @@ h1.site-title {
     margin-left: 50%;
     max-width: 50%;
     padding-left: 12px; }
-  .card-row-short > .card-half.card-txt a .category,
+  .card-row-short > .card-half.card-txt a .card-label-category,
   .card-row-short > .card-half.card-txt a .video-icon {
     right: calc(50% + 12px); }
   .card-row-short > .card-half.card-txt a .bg-container {
