--- a/style.css
+++ b/style.css
@@ -1091,10 +1091,10 @@ h1.site-title {
   z-index: 5; }
 
 .story-card > a h2 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.35;
-  margin: 0 0 1rem 0;
+  margin: 0 0 .5rem 0;
   padding: 0;
   text-decoration: none;
   -webkit-transition: all 0.5s ease;
@@ -1337,8 +1337,7 @@ h1.site-title {
 
   .card-txt.card-half a h2,
   .card-txt.card-quarter a h2 {
-    font-size: 1rem;
-    margin-bottom: .5rem; }
+    font-size: 1rem; }
   .card-txt.card-half a p.teaser,
   .card-txt.card-quarter a p.teaser {
     font-size: .9rem; } }
@@ -1370,7 +1369,12 @@ h1.site-title {
     flex-basis: 50%; }
 
   .story-card.card-quarter {
-    flex-basis: 25%; } }
+    flex-basis: 25%; }
+
+  .card-txt.card-half.card-tall a h2 {
+    font-size: 1.2rem; }
+  .card-txt.card-half.card-tall a p.teaser {
+    font-size: .9rem; } }
 @media (min-width: 960px) {
   .card-row {
     flex-direction: row;
@@ -1385,6 +1389,14 @@ h1.site-title {
     margin-left: 12px;
     margin-right: 12px;
     width: calc(100% - 24px); }
+
+  .card-img a h2,
+  .card-noimg a h2,
+  .card-txt.card-half.card-tall a h2,
+  .card-full.card-txt a h2,
+  .card-row-1 .card-1.card-txt a h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem; }
 
   .card-img.card-quarter a p.teaser {
     background-color: transparent;
@@ -1425,6 +1437,9 @@ h1.site-title {
     top: 0;
     left: 0;
     width: calc(50% - 12px); }
+
+  .card-img.card-full a .text {
+    max-width: calc(50% - 12px); }
 
   .card-full.card-txt a .text,
   .card-row-1 .card-1.card-txt a .text {
