--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -14,8 +14,8 @@
 .story-card {
 	display: block;
 	flex-grow: 1;
-	height: 100%;
-	//min-height: 360px;
+	//height: 100%;
+	height: auto;
 	margin: 0 0 16px 0;
 	padding: 0;
 	position: relative;
@@ -164,14 +164,10 @@
 
 .card-txt {
 	a {
-		//padding-top: 40%;
-		
 		.text {
 			background-color: $ultgray;
 			max-width: 100%;
-			//margin-top: 40%;
 			padding: .5rem;
-			//top: 40%;
 			@include transition( all .5s ease );
 		}
 		
@@ -180,6 +176,8 @@
 		}
 		
 		p.continue {
+			display: none;
+			/*
 			background-color: $mltgray;
 			border-radius: .25em;
 			color: $midgray;
@@ -187,40 +185,27 @@
 			font-size: .9rem;
 			letter-spacing: .015em;
 			padding: .5em;
+			*/
 		}
 		
 		.card-label-category {
-			//position: absolute;
-			top: calc(150px - 2.5rem - 4px);
+			top: calc(300px - 2.5rem - 4px);
 			bottom: auto;
 			right: 0;
-			//background: $voared;
-			//border-color: $bodybg;
-			//border-style: solid;
 			border-width: 2px 0 2px 2px;
-			//color: $offwhite;
-			//font-size: .8rem;
-			//line-height: 1;
-			//margin: 0;
 			padding: .5rem 1rem .5rem .75rem;
-			//z-index: 10;
 		}
 		
 		.bg-container {
 			background-position: center top;
-			//max-height: 150px;
-			//height: 100%;
-			
 			position: relative;
 			display: block;
 			top: 0;
 			right: 0;
 			bottom: auto;
 			left: 0;
-			height: 150px;
+			height: 300px;
 		}
-		
-		// .card-label-category, .video-icon { display: none !important; }
 	}
 	
 	a:hover {
@@ -321,27 +306,29 @@
 	
 	.story-card {
 		flex-basis: 0;
-		height: 450px;
+		//height: 450px;
+		min-height: 450px;
 		overflow: hidden;
 	}
 	
 	.card-row-2.card-row-short > .story-card {
-		height: auto;
+		//height: auto;
 	}
 	
 	.card-row-2.card-row-short > .card-img > a {
-		min-height: auto;
+		//min-height: auto;
 	}
 	
 	.card-row-2 > .card-txt > a {
-		min-height: 207px;
+		//min-height: 207px;
 	}
 
 	.story-card.card-half {
 		flex-basis: 50%;
 	}
 
-	.story-card.card-quarter {
+	.story-card.card-quarter,
+	.card-row-4 .story-card {
 		flex-basis: 50%;
 	}
 
@@ -377,8 +364,12 @@
 	.card-txt.card-half,
 	.card-txt.card-quarter {
 		a {
-			h2 { font-size: 1rem; }
-			p.teaser { font-size: .9rem; }
+			h2 { 
+				//font-size: 1rem;
+			}
+			p.teaser { 
+				font-size: .9rem;
+			}
 		}
 	}
 
@@ -434,7 +425,8 @@
 		flex-basis: 50%;
 	}
 
-	.story-card.card-quarter {
+	.story-card.card-quarter,
+	.card-row-4 .story-card {
 		flex-basis: 25%;
 	}
 	
@@ -460,7 +452,7 @@
 	
 	.story-card {
 		flex-basis: 0;
-		height: 576px;
+		min-height: 576px;
 		margin-bottom: 24px;
 	}
 
@@ -498,11 +490,11 @@
 	.card-txt {
 		a {
 			.card-label-category {
-				top: calc(207px - 2.5rem - 4px);
+				top: calc(375px - 2.5rem - 4px);
 			}
 			
 			.bg-container {
-				height: 207px;
+				height: 375px;
 			}
 		}
 	}
@@ -552,4 +544,14 @@
 
 
 
-@media (min-width: 1200px) { }
+@media (min-width: 1200px) {
+	
+	.card-txt.card-quarter,
+	.card-row-4 .card-txt {
+		a {
+			h2 { font-size: 1.5rem; }
+			p.teaser { font-size: 1rem; }
+		}
+	}
+	
+}
