--- a/style.css
+++ b/style.css
@@ -1046,7 +1046,7 @@ h1.site-title {
 .story-card {
   display: block;
   flex-grow: 1;
-  height: 100%;
+  height: auto;
   margin: 0 0 16px 0;
   padding: 0;
   position: relative;
@@ -1184,15 +1184,18 @@ h1.site-title {
 .card-txt a h2 {
   color: #333; }
 .card-txt a p.continue {
-  background-color: #ccc;
+  display: none;
+  /*
+  background-color: $mltgray;
   border-radius: .25em;
-  color: #666;
+  color: $midgray;
   display: inline-block;
   font-size: .9rem;
   letter-spacing: .015em;
-  padding: .5em; }
+  padding: .5em;
+  */ }
 .card-txt a .card-label-category {
-  top: calc(150px - 2.5rem - 4px);
+  top: calc(300px - 2.5rem - 4px);
   bottom: auto;
   right: 0;
   border-width: 2px 0 2px 2px;
@@ -1205,7 +1208,7 @@ h1.site-title {
   right: 0;
   bottom: auto;
   left: 0;
-  height: 150px; }
+  height: 300px; }
 .card-txt a:hover .bg-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); }
 .card-txt a:hover .text {
@@ -1284,22 +1287,14 @@ h1.site-title {
 
   .story-card {
     flex-basis: 0;
-    height: 450px;
+    min-height: 450px;
     overflow: hidden; }
-
-  .card-row-2.card-row-short > .story-card {
-    height: auto; }
-
-  .card-row-2.card-row-short > .card-img > a {
-    min-height: auto; }
-
-  .card-row-2 > .card-txt > a {
-    min-height: 207px; }
 
   .story-card.card-half {
     flex-basis: 50%; }
 
-  .story-card.card-quarter {
+  .story-card.card-quarter,
+  .card-row-4 .story-card {
     flex-basis: 50%; }
 
   .card-row-3 > .story-card.card-half {
@@ -1335,9 +1330,6 @@ h1.site-title {
     box-shadow: 0.5rem 0 0 #333, -0.5rem 0 0 #333;
     color: #fcfcfc; }
 
-  .card-txt.card-half a h2,
-  .card-txt.card-quarter a h2 {
-    font-size: 1rem; }
   .card-txt.card-half a p.teaser,
   .card-txt.card-quarter a p.teaser {
     font-size: .9rem; } }
@@ -1368,7 +1360,8 @@ h1.site-title {
   .card-row-3 > .story-card.card-half {
     flex-basis: 50%; }
 
-  .story-card.card-quarter {
+  .story-card.card-quarter,
+  .card-row-4 .story-card {
     flex-basis: 25%; }
 
   .card-txt.card-half.card-tall a h2 {
@@ -1382,7 +1375,7 @@ h1.site-title {
 
   .story-card {
     flex-basis: 0;
-    height: 576px;
+    min-height: 576px;
     margin-bottom: 24px; }
 
   .story-card > a {
@@ -1421,9 +1414,9 @@ h1.site-title {
     color: #fcfcfc; }
 
   .card-txt a .card-label-category {
-    top: calc(207px - 2.5rem - 4px); }
+    top: calc(375px - 2.5rem - 4px); }
   .card-txt a .bg-container {
-    height: 207px; }
+    height: 375px; }
 
   .card-row-short > .card-half.card-txt a .text {
     margin-left: 50%;
@@ -1447,6 +1440,13 @@ h1.site-title {
   .card-full.card-txt a .bg-container,
   .card-row-1 .card-1.card-txt a .bg-container {
     max-width: calc(50% - 12px); } }
+@media (min-width: 1200px) {
+  .card-txt.card-quarter a h2,
+  .card-row-4 .card-txt a h2 {
+    font-size: 1.5rem; }
+  .card-txt.card-quarter a p.teaser,
+  .card-row-4 .card-txt a p.teaser {
+    font-size: 1rem; } }
 .hero-row {
   display: block; }
 
